# ciberseguridad

./: .gitignore  README.md  SecureGuard-Demo.txt  antivirus_demo.py  index.html  pyproject.toml  signatures.txt  styles.css
secureguard/: __init__.py  cli.py  config.py  quarantine.py  scanner.py
